--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "framer-motion": "^11.15.0",
     "jquery": "^3.7.1",
     "lucide-react": "^0.468.0",
-    "next": "14.0.4",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^15.1.2",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
   },
