--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@netlify/plugin-nextjs": "^5.9.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "decap-cms": "^3.4.0",
     "framer-motion": "^11.15.0",
+    "gray-matter": "^4.0.3",
     "jquery": "^3.7.1",
     "lucide-react": "^0.468.0",
     "next": "^15.1.2",
