--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@netlify/plugin-nextjs": "^5.9.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "es6-promise": "^4.2.8",
     "framer-motion": "^11.15.0",
     "gray-matter": "^4.0.3",
     "jquery": "^3.7.1",
