--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,7 @@
   "extends": ["eslint:recommended", "next/core-web-vitals"],
   "rules": {
     "react/prop-types": "off",
-    "no-unused-vars": "off"
+    "no-unused-vars": "off",
+    "@next/next/no-img-element": "off"
   }
 }
