--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -8,25 +8,9 @@ collections:
     label: "Projects"
     folder: "content/projects"
     create: true
-    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
-    editor:
-      preview: false
+    slug: "{{slug}}"
     fields:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Description", name: "description", widget: "text" }
+      - { label: "Image", name: "image", widget: "image" }
       - { label: "Content", name: "content", widget: "markdown" }
-      - { label: "Thumbnail", name: "thumbnail", widget: "image" }
-      - { label: "Date", name: "date", widget: "datetime" }
-      - {
-          label: "Technologies",
-          name: "technologies",
-          widget: "list",
-          field: { label: "Technology", name: "tech", widget: "string" },
-        }
-      - {
-          label: "Status",
-          name: "status",
-          widget: "select",
-          options: ["draft", "in-progress", "completed"],
-          default: "draft",
-        }
