--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -12,5 +12,29 @@ collections:
     fields:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Description", name: "description", widget: "text" }
-      - { label: "Image", name: "image", widget: "image" }
+      - { label: "Thumbnail", name: "thumbnail", widget: "image" }
+      - { label: "Year", name: "year", widget: "string" }
+      - { label: "Team", name: "team", widget: "string" }
+      - {
+          label: "Awards",
+          name: "awards",
+          widget: "list",
+          fields: [{ label: "Award", name: "award", widget: "string" }],
+        }
       - { label: "Content", name: "content", widget: "markdown" }
+      - {
+          label: "Gallery Images",
+          name: "gallery_images",
+          widget: "list",
+          fields:
+            [
+              { label: "Image 1", name: "image_1", widget: "image" },
+              { label: "Image 2", name: "image_2", widget: "image" },
+              { label: "Image 3", name: "image_3", widget: "image" },
+            ],
+        }
+      - {
+          label: "Live Preview Link",
+          name: "live_preview_link",
+          widget: "string",
+        }
