--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -14,6 +14,7 @@ collections:
       - { label: "Description", name: "description", widget: "text" }
       - { label: "Thumbnail", name: "thumbnail", widget: "image" }
       - { label: "Year", name: "year", widget: "string" }
+      - { label: "Category", name: "category", widget: "string" }
       - { label: "Team", name: "team", widget: "string" }
       - {
           label: "Awards",
