--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "core-js": "^3.39.0",
+    "emailjs-com": "^3.2.0",
     "es6-promise": "^4.2.8",
     "framer-motion": "^11.15.0",
     "gray-matter": "^4.0.3",
