--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jquery": "^3.7.1",
     "lucide-react": "^0.468.0",
     "next": "^15.1.2",
+    "next-pwa": "^5.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "remark": "^15.0.1",
